--- a/config/config-dev.yaml
+++ b/config/config-dev.yaml
@@ -5,7 +5,7 @@ server:
     host: 127.0.0.1
     port: 9992
 db:
-  dsn: root:rsw123456@tcp(127.0.0.1:3306)/couples_subtotal?charset=utf8mb4&parseTime=true&loc=Local
+  dsn: root:20190624319xq@tcp(127.0.0.1:3306)/couples_subtotal?charset=utf8mb4&parseTime=true&loc=Local
   maxOpenConns: 200
   maxIdleConns: 50
 log:
